--- a/style.css
+++ b/style.css
@@ -551,6 +551,7 @@ figure {
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
+  table-layout: fixed;
   width: 100%;
 }
 
@@ -558,6 +559,7 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  word-wrap: break-word;
 }
 
 tr:nth-child(even) {
