--- a/style.css
+++ b/style.css
@@ -577,7 +577,7 @@ body {
 /* The grid: Three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  width: 2000px;
   padding: 50px;
   text-align: center;
   font-size: 25px;
